--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -13,9 +13,18 @@
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="wrap_content"
         android:id="@+id/toolbar"
         app:layout_scrollFlags="scroll|enterAlways">
+
+        <SearchView
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:id="@+id/search_view"
+            android:queryHint="what SCD ingredient you looking for?">
+
+
+        </SearchView>
 
     </androidx.appcompat.widget.Toolbar>
 
