--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -8,6 +8,7 @@
     tools:context=".RecipeListActivity">
     
 <com.google.android.material.appbar.AppBarLayout
+    android:backgroundTint="@color/cardview_light_background"
     android:layout_height="wrap_content"
     android:layout_width="match_parent">
 
